<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/key_length"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/key_length"
            android:inputType="number"
            android:padding="10dp"
            android:visibility="gone"
            app:counterMaxLength="4">

            <EditText
                android:id="@+id/kl_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:inputType="number"
                android:labelFor="@id/kl_edit"
                android:lines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/key"
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:hint="@string/key"
            android:inputType="textPassword"
            android:padding="10dp">

            <EditText
                android:id="@+id/pw_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:inputType="textPassword"
                android:labelFor="@id/pw_edit"
                android:lines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/public_key"
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:hint="@string/private_key"
            android:inputType="textPassword"
            android:padding="10dp"
            android:visibility="gone">

            <EditText
                android:id="@+id/pk_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:inputType="textPassword"
                android:labelFor="@id/pk_edit"
                android:lines="1" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dh_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/a"
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:hint="@string/a"
            android:paddingBottom="10dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp">

            <EditText
                android:id="@+id/p_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:inputType="textPassword"
                android:labelFor="@id/p_edit"
                android:lines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/dh_key"
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:hint="@string/dh_key"
            android:inputType="textPassword"
            android:paddingBottom="10dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp">

            <EditText
                android:id="@+id/dk_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:inputType="textPassword"
                android:labelFor="@id/pw_edit"
                android:lines="1" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</LinearLayout>
