<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="16dp"
    android:layout_marginTop="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="0dp"
        android:paddingStart="10dp"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/cipher_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:showDividers="middle">

            <android.support.v7.widget.CardView
                android:id="@+id/caesear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:clickable="true"
                android:foreground="?android:selectableItemBackground"
                android:minWidth="80dp"
                app:cardBackgroundColor="@color/classicalCipher"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:drawableTop="@drawable/ic_classical"
                    android:gravity="center"
                    android:text="@string/caesear"
                    android:textColor="@android:color/white" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/vigenere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:clickable="true"
                android:foreground="?android:selectableItemBackground"
                android:minWidth="80dp"
                app:cardBackgroundColor="@color/classicalCipher"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:drawableTop="@drawable/ic_classical"
                    android:gravity="center"
                    android:text="@string/vigenere"
                    android:textColor="@android:color/white" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/autokey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:clickable="true"
                android:foreground="?android:selectableItemBackground"
                android:minWidth="80dp"
                app:cardBackgroundColor="@color/classicalCipher"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:drawableTop="@drawable/ic_classical"
                    android:gravity="center"
                    android:text="@string/autokey"
                    android:textColor="@android:color/white" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/keyword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:clickable="true"
                android:foreground="?android:selectableItemBackground"
                android:minWidth="80dp"
                app:cardBackgroundColor="@color/classicalCipher"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:drawableTop="@drawable/ic_classical"
                    android:gravity="center"
                    android:text="@string/keyword"
                    android:textColor="@android:color/white" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/column_permutation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:clickable="true"
                android:foreground="?android:selectableItemBackground"
                android:minWidth="80dp"
                app:cardBackgroundColor="@color/classicalCipher"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:drawableTop="@drawable/ic_classical"
                    android:gravity="center"
                    android:text="@string/column_permutation"
                    android:textColor="@android:color/white" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/playfair"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:clickable="true"
                android:foreground="?android:selectableItemBackground"
                android:minWidth="80dp"
                app:cardBackgroundColor="@color/classicalCipher"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:drawableTop="@drawable/ic_classical"
                    android:gravity="center"
                    android:text="@string/playfair"
                    android:textColor="@android:color/white" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/rc4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:clickable="true"
                android:foreground="?android:selectableItemBackground"
                android:minWidth="80dp"
                app:cardBackgroundColor="@color/modernCipher"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:drawableTop="@drawable/ic_modern"
                    android:gravity="center"
                    android:text="@string/rc4"
                    android:textColor="@android:color/white" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:clickable="true"
                android:foreground="?android:selectableItemBackground"
                android:minWidth="80dp"
                app:cardBackgroundColor="@color/modernCipher"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:drawableTop="@drawable/ic_modern"
                    android:gravity="center"
                    android:text="@string/des"
                    android:textColor="@android:color/white" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/rsa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:clickable="true"
                android:foreground="?android:selectableItemBackground"
                android:minWidth="80dp"
                app:cardBackgroundColor="@color/modernCipher"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:drawableTop="@drawable/ic_modern"
                    android:gravity="center"
                    android:text="@string/rsa"
                    android:textColor="@android:color/white" />
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>