<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingTop="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="0dp"
        android:paddingStart="10dp"
        android:text="@string/mode"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/mode_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:showDividers="middle">

            <android.support.v7.widget.CardView
                android:id="@+id/crypt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:clickable="false"
                android:foreground="?android:selectableItemBackground"
                android:minWidth="80dp"
                app:cardBackgroundColor="@color/disabled"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:drawableTop="@drawable/ic_lock"
                    android:gravity="center"
                    android:text="@string/crypt"
                    android:textColor="@android:color/white" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/socket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:clickable="false"
                android:foreground="?android:selectableItemBackground"
                android:minWidth="80dp"
                app:cardBackgroundColor="@color/disabled"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:drawableTop="@drawable/ic_swap"
                    android:gravity="center"
                    android:text="@string/socket"
                    android:textColor="@android:color/white" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:clickable="false"
                android:foreground="?android:selectableItemBackground"
                android:minWidth="80dp"
                app:cardBackgroundColor="@color/disabled"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:drawableTop="@drawable/ic_folder"
                    android:gravity="center"
                    android:text="@string/bytes"
                    android:textColor="@android:color/white" />
            </android.support.v7.widget.CardView>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ip_addr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:hint="@string/ip"
                android:minWidth="124dp"
                android:visibility="gone">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ip_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits=".0123456789"
                    android:gravity="start"
                    android:inputType="number"
                    android:labelFor="@+id/ip_edit"
                    android:scrollHorizontally="false" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>