<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingTop="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="0dp"
        android:paddingStart="10dp"
        android:text="@string/open_file"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/open_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:showDividers="middle">

            <android.support.v7.widget.CardView
                android:id="@+id/open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:clickable="true"
                android:foreground="?android:selectableItemBackground"
                app:cardBackgroundColor="@color/switcher"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:text="@string/open"
                    android:textColor="@android:color/white" />
            </android.support.v7.widget.CardView>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/file_path"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/file_path"
                android:minWidth="315.5dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/fp_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:gravity="start"
                    android:labelFor="@+id/fp_edit"
                    android:scrollHorizontally="false" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>